--- a/resources/sass/frontend/_variables.scss
+++ b/resources/sass/frontend/_variables.scss
@@ -12,6 +12,9 @@ $cover-width: 1920px;
 $cover-height: 960px;
 $cover-raito: $cover-width / $cover-height;
 
+// 網站的最小寬度
+$web-min-width: 300px;
+
 // // Change below variable to change the width of the sidenav
 // $sidebar-base-width: 225px;
 // // Change below variable to change the width of the sidenav when collapsed
