--- a/resources/sass/frontend/_footer.scss
+++ b/resources/sass/frontend/_footer.scss
@@ -1,5 +1,6 @@
 footer{
-    width: 100%;
+	width: 100%;
+	min-width: $web-min-width;
     height: $footer-height;
 	display: flex;
 	background-color: $brown;
@@ -23,12 +24,12 @@ footer{
 			width: 100%;
 			position: absolute;
 			right: 0;
-			bottom: 20px;
+			bottom: 30px;
 			font-size: 0.8rem;
 			text-align: right;
 			.button-area{
-				width: 150px;
-				height: 50px;
+				width: 120px;
+				height: 45px;
 				display: block;
 				margin-bottom: 0px;
 				padding: 0;
@@ -36,11 +37,11 @@ footer{
 					float: left;
 				}
 				.nav-item {
-					width: 50px;
+					width: 40px;
 					margin: 0px;
 					.nav-link {
 						img {
-							width: 30px;
+							width: 25px;
 						}
 						&:hover{
 							border: none;
@@ -60,6 +61,12 @@ footer{
 			.copyright {
 				line-height: 2rem;
 			}
+			@media (max-width: 1300px) {
+				right: 3%;
+			}
+			@media (max-width: 992px) {
+				bottom: 20px;
+			}
 			@media (max-width: 768px) {
 				text-align: left;
 				right: -15px;
@@ -71,7 +78,7 @@ footer{
 	}
 	.top{
 		float: right;
-		width: 40px;
+		width: 90px;
 		border-left: 1px solid $white;
 		padding: 10px 5px;
 		position: relative;
@@ -79,15 +86,17 @@ footer{
 		cursor: pointer;
 		img{
 			width: 6px;
+			height: 100px;
 			margin: 10px 10px 5px 10px;
 		}
 		span{
 			font-weight: bold;
+			font-size: 1.2rem;
 			letter-spacing: 5px;
 			transform: rotate(90deg);
 			position: absolute;
-			bottom: 15px;
-			left: -4px;
+			bottom: 21px;
+			left: 18px;
 			transition: all 0.5s ease;
 		}
 		&:hover{
@@ -95,24 +104,39 @@ footer{
 				color: $green;
 			}
 		}
+		@media (max-width: 1300px) {
+			margin-left: 10px;
+		}
+		@media (max-width: 1100px) {
+			span{
+				left: 14px;
+			}
+		}
 		@media (max-width: 992px) {
-			width: 50px;
+			width: 100px;
 			img{
-				width: 9px;
+				width: 10px;
+				height: 145px;
 			}
 			span{
-				bottom: 24px;
-				left: 3%;
+				bottom: 33px;
+				left: 19%;
 			}
 		}
 		@media (max-width: 768px) {
-			width: 70px;
+			width: 150px;
 			img{
-				width: 14px;
+				width: 15px;
+				height: 240px;
 			}
 			span{
-				bottom: 24px;
-				left: 15%;
+				bottom: 31px;
+				left: 31%;
+			}
+		}
+		@media (max-width: 680px) {
+			span{
+				left: 26%;
 			}
 		}
 	}
