--- a/resources/sass/frontend/_news.scss
+++ b/resources/sass/frontend/_news.scss
@@ -18,6 +18,7 @@
                 background-position: bottom;
                 padding-bottom: 10px;
                 margin-bottom: 30px;
+                background-size: 100%;
                 .newsDate {
                     font-weight: bold;
                     font-size: 1.5rem;
