--- a/resources/sass/frontend/donations/_header.scss
+++ b/resources/sass/frontend/donations/_header.scss
@@ -13,6 +13,9 @@ section#donation {
         margin-bottom: 18px;
         margin-right: 15px;
     }
+    .content {
+        text-align: center;
+    }
 }
 
 section#donation-content {
