--- a/public/css/frontend/donations/index.css
+++ b/public/css/frontend/donations/index.css
@@ -14,6 +14,9 @@ section#donation .title-icon {
   margin-bottom: 18px;
   margin-right: 15px;
 }
+section#donation .content {
+  text-align: center;
+}
 
 section#donation-content {
   background-color: #eaeaea;
