--- a/public/css/frontend/donations/index.css
+++ b/public/css/frontend/donations/index.css
@@ -1,35 +1,63 @@
-section#donation {
+.content-page-header {
   width: 100%;
   height: 200px;
   background-color: #ffffff;
 }
-section#donation h1 {
+.content-page-header h1 {
   color: #55473f;
   font-size: 2.5rem;
   letter-spacing: 15px;
   display: inline-block;
 }
-section#donation .title-icon {
+.content-page-header .title-icon {
   width: 60px;
   margin-bottom: 18px;
   margin-right: 15px;
 }
-section#donation .content {
+.content-page-header .content {
   text-align: center;
 }
 
-section#donation-content {
+.content-page-body {
   background-color: #eaeaea;
   padding: 70px 0px 60px 0px;
 }
-section#donation-content .goback-container {
+.content-page-body .goback-container {
   margin-top: 40px;
   border-bottom: 0.5px solid #5f6b82;
 }
-section#donation-content .goback-container .goback-text {
+.content-page-body .goback-container .goback-text {
   font-size: 1.2rem;
   color: #55473f;
 }
-section#donation-content .goback-container .goback-text:hover {
+.content-page-body .goback-container .goback-text:hover {
   text-decoration: none;
+}
+
+.content-paginate-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 2.3rem;
+  margin-top: 18px;
+}
+.content-paginate-container .content-paginate {
+  list-style: none;
+  margin: 0;
+}
+.content-paginate-container .content-paginate li {
+  display: block;
+  width: 60px;
+  color: #93e5b4;
+  float: left;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+}
+.content-paginate-container .content-paginate li:hover {
+  color: #55473f;
 }
