--- a/public/css/frontend/activities/index.css
+++ b/public/css/frontend/activities/index.css
@@ -50,6 +50,7 @@
 .content-paginate-container .content-paginate li {
   display: block;
   width: 60px;
+  height: 2rem;
   color: #93e5b4;
   float: left;
   text-align: center;
@@ -60,6 +61,21 @@
 }
 .content-paginate-container .content-paginate li:hover {
   color: #55473f;
+}
+.content-paginate-container .content-paginate li span {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.content-paginate-container .content-paginate li span.activated {
+  color: #55473f;
+  cursor: default;
+}
+.content-paginate-container .content-paginate li.disabled {
+  cursor: default;
+}
+.content-paginate-container .content-paginate li.disabled:hover {
+  color: #93e5b4;
 }
 
 .switch-btn-row {
