--- a/resources/sass/frontend/_contents.scss
+++ b/resources/sass/frontend/_contents.scss
@@ -48,6 +48,7 @@
         li {
             display: block;
             width: 60px;
+            height: 2rem;
             color: $green;
             float: left;
             text-align: center;
@@ -57,6 +58,21 @@
             transition: color 0.2s ease-in-out;
             &:hover {
                 color: $brown;
+            }
+            span {
+                display: block;
+                width: 100%;
+                height: 100%;
+                &.activated {
+                    color: $brown;
+                    cursor: default;
+                }
+            }
+            &.disabled {
+                cursor: default;
+            }
+            &.disabled:hover {
+                color: $green;
             }
         }
     }
