--- a/resources/sass/frontend/_navbar.scss
+++ b/resources/sass/frontend/_navbar.scss
@@ -37,7 +37,7 @@
                     height: 100%;
                     padding: 5px;
                     position: absolute;
-                    top: 0;
+                    top: -3px;
                     left: 0;
                     cursor: pointer;
                     img {
