--- a/public/css/frontend/activities/index.css
+++ b/public/css/frontend/activities/index.css
@@ -18,6 +18,21 @@
   text-align: center;
 }
 
+.detail-page-header {
+  width: 100%;
+  height: 200px;
+  background-color: #eaeaea;
+}
+.detail-page-header h1 {
+  color: #55473f;
+  font-size: 2.5rem;
+  letter-spacing: 15px;
+  display: inline-block;
+}
+.detail-page-header .content {
+  text-align: center;
+}
+
 .content-page-body {
   background-color: #eaeaea;
   padding: 70px 0px 60px 0px;
