--- a/resources/sass/frontend/_contents.scss
+++ b/resources/sass/frontend/_contents.scss
@@ -18,6 +18,21 @@
     }
 }
 
+.detail-page-header {
+    width: 100%;
+    height: 200px;
+    background-color: $gray;
+    h1 {
+        color: $brown;
+        font-size: 2.5rem;
+        letter-spacing: 15px;
+        display: inline-block;
+    }
+    .content {
+        text-align: center;
+    }
+}
+
 .content-page-body {
     background-color: $gray;
     padding: 70px 0px 60px 0px;
