--- a/public/css/frontend/about/index.css
+++ b/public/css/frontend/about/index.css
@@ -18,21 +18,6 @@
   text-align: center;
 }
 
-.detail-page-header {
-  width: 100%;
-  height: 200px;
-  background-color: #eaeaea;
-}
-.detail-page-header h1 {
-  color: #55473f;
-  font-size: 2.5rem;
-  letter-spacing: 15px;
-  display: inline-block;
-}
-.detail-page-header .content {
-  text-align: center;
-}
-
 .content-page-body {
   background-color: #eaeaea;
   padding: 70px 0px 60px 0px;
@@ -46,6 +31,22 @@
   color: #55473f;
 }
 .content-page-body .goback-container .goback-text:hover {
+  text-decoration: none;
+}
+
+.detail-page-body {
+  background-color: #eaeaea;
+  padding: 0px 0px 60px 0px;
+}
+.detail-page-body .goback-container {
+  margin-top: 40px;
+  border-bottom: 0.5px solid #5f6b82;
+}
+.detail-page-body .goback-container .goback-text {
+  font-size: 1.2rem;
+  color: #55473f;
+}
+.detail-page-body .goback-container .goback-text:hover {
   text-decoration: none;
 }
 
