--- a/resources/sass/frontend/_contents.scss
+++ b/resources/sass/frontend/_contents.scss
@@ -18,24 +18,25 @@
     }
 }
 
-.detail-page-header {
-    width: 100%;
-    height: 200px;
-    background-color: $gray;
-    h1 {
-        color: $brown;
-        font-size: 2.5rem;
-        letter-spacing: 15px;
-        display: inline-block;
-    }
-    .content {
-        text-align: center;
-    }
-}
-
 .content-page-body {
     background-color: $gray;
     padding: 70px 0px 60px 0px;
+    .goback-container {
+        margin-top: 40px;
+        border-bottom: 0.5px solid $blue;
+        .goback-text {
+            font-size: 1.2rem;
+            color: $brown;
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+.detail-page-body {
+    background-color: $gray;
+    padding: 0px 0px 60px 0px;
     .goback-container {
         margin-top: 40px;
         border-bottom: 0.5px solid $blue;
