--- a/resources/sass/frontend/recommandations/index.scss
+++ b/resources/sass/frontend/recommandations/index.scss
@@ -93,7 +93,9 @@
             margin-bottom: 28px;
             h3 {
                 margin: 0;
-                font-size: 2.7rem;
+                font-size: 3rem;
+                bottom: 4px;
+                position: relative;
                 font-weight: bold;
                 display: inline-block;
                 color: $green;
@@ -104,7 +106,9 @@
                 font-style: italic;
                 position: relative;
                 right: 5px;
-                font-weight: lighter;
+                bottom: 10px;
+                font-size: 1.2rem;
+                // font-weight: lighter;
             }
         }
         .recommandation-card-title {
